# writeup-chatbot

./: Dockerfile  README.md  main.py  pyproject.toml
app/static/: script.js  style.css
app/templates/: index.html
